- ADDED: Support for Imaris (IMS) format
- ADDED: Support for Openlab RAW format
- ADDED: Support for OME-XML format
- ADDED: Option to use 3D texturing in volume rendering
- ADDED: Option to use nicer transparency blending

- FIXED: Eliminated dependency on QuickTime for MOV, PICT and Openlab LIFF
- FIXED: Eliminated dependency on Jakarta POI for Image-Pro IPW and Zeiss ZVI
- FIXED: Bug in text overlays


v3.22 - Tuesday, January 24, 2006

- ADDED: Interface for computing transform results with external system calls
- ADDED: Ability to switch between OpenGL and Direct3D modes on Windows

- FIXED: A few minor bugfixes


v3.21 - Monday, December 12, 2005

- ADDED: Support for Image Cytometry Standard (ICS) format

- FIXED: LZW compression now uses horizontal differencing


v3.20 - Tuesday, November 29, 2005

- ADDED: Rewrote TIFF export to save incrementally (uses much less memory)
- ADDED: Option to use LZW compression when exporting TIFF files
- ADDED: Support for Image-Pro Sequence (SEQ) format
- ADDED: Support for Image-Pro Workspace (IPW) format

- TWEAK: Smaller download size

- FIXED: Grayed out thumbnail generation stop button


v3.19 - Wednesday, November 9, 2005

- ADDED: Support for Gatan Digital Micrograph DM3 format

- FIXED: Serious bug with single images


v3.18 - Friday, November 4, 2005

- ADDED: Support for PerkinElmer file format

- TWEAK: Additional menu shortcuts

- FIXED: Rewrote arbitrary slicing logic to be more efficient
- FIXED: Z axis bug with multiple data objects in a single 3D window
- FIXED: Scaling bug with arbitrary slicing of some data
- FIXED: Data object reordering in 3D displays (Up/Down buttons)
- FIXED: Dataset importer buttons staying greyed out after an error occurs


v3.17 - Friday, October 28, 2005

- ADDED: Support for Deltavision file format
- ADDED: Support for Leica file format
- ADDED: Zeiss ZVI reader metadata parsing
- ADDED: Partial support for multiple dimensional axes per file